<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Viewer.DirectionsActivity">

    <Button
        android:id="@+id/skip_button"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#8BC34A"
        android:fontFamily="monospace"
        android:onClick="onSkipButtonClicked"
        android:text="Skip"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_button" />

    <Button
        android:id="@+id/start_over_button"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#8BC34A"
        android:fontFamily="monospace"
        android:onClick="onStartOverButtonClicked"
        android:text="Start Over"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previous_button" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#8BC34A"
        android:fontFamily="monospace"
        android:onClick="onNextButtonClicked"
        android:text="Next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.773"
        app:layout_constraintStart_toEndOf="@+id/previous_button"
        app:layout_constraintTop_toBottomOf="@+id/directions_text" />

    <Button
        android:id="@+id/previous_button"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#8BC34A"
        android:fontFamily="monospace"
        android:onClick="onPreviousButtonClicked"
        android:text="Previous"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/directions_text" />

    <TextView
        android:id="@+id/directions_header"
        android:layout_width="375dp"
        android:layout_height="42dp"
        android:text="Directions to ___"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:textStyle="bold" />

    <TextView
        android:id="@+id/directions_text"
        android:layout_width="377dp"
        android:layout_height="432dp"
        android:text="proceed _____"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/directions_header" />

    <Button
        android:id="@+id/replan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="164dp"
        android:backgroundTint="#8BC34A"
        android:onClick="onReplanButtonClicked"
        android:text="Replan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/directions_text" />

</androidx.constraintlayout.widget.ConstraintLayout>